Thu Jun 25 13:26:13 UTC 2009  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Restore pre-5.7 build
          functionality for non-MPC-generated Makefiles that use LIB to
          specify what library to build. Fixes Bugzilla 3708.

Thu Jun 25 02:09:51 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          More fixes

        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-cosconcurrency
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-cosevent
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-cosnaming
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-cosnotification
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-costrading
        * rpmbuild/ace-tao-init-fedora/rc.d/init.d/tao-rtevent
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosconcurrency
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosevent
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosnaming
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosnotification
        * rpmbuild/ace-tao-init-suse/init.d/tao-costrading
        * rpmbuild/ace-tao-init-suse/init.d/tao-rtevent
          Set svn:executable

Wed Jun 24 19:33:51 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          Some more fixes

Wed Jun 24 18:19:24 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * ace/OS_NS_ctype.inl:
        * ace/config-win32-msvc.h:

          Revised the change from yesterday to only apply to Visual C++ and not
          the other Win32 compilers.

Wed Jun 24 08:51:51 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          First set of fixed to get x.7.0 compiling on OpenSuSE Build

Sun Jun 21 14:34:13 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Log_Msg.cpp (log): Changed the use of
          ACE_Log_Record::MAXLOGMSGLEN to ACE_MAXLOGMSGLEN to avoid