@@ -1,0 +1,4 @@
+int foo()
+{
+  return 42;
+}
